--- a/RestTemplete/pom.xml
+++ b/RestTemplete/pom.xml
@@ -22,6 +22,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<properties>
+                       <sonar.organization>ashishnanaware</sonar.organization>
+                       <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+                </properties>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
